--- a/src/jfbchat/panels/PanelMessageSent.form
+++ b/src/jfbchat/panels/PanelMessageSent.form
@@ -85,12 +85,12 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="LabelText" pref="160" max="32767" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="avatarLabel1" max="32767" attributes="0"/>
-                              <Component id="Labelfromto" max="32767" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="avatarLabel1" min="-2" max="-2" attributes="0"/>
+                              <Component id="Labelfromto" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
                           </Group>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="LabelText" pref="160" max="32767" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -99,11 +99,11 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Component id="LabelText" min="-2" pref="76" max="-2" attributes="0"/>
                               <Group type="102" attributes="0">
                                   <Component id="avatarLabel1" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace max="-2" attributes="0"/>
+                                  <EmptySpace max="32767" attributes="0"/>
                                   <Component id="Labelfromto" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
